deploy: 58962d449145ad442c1b43996d10caa06eb2a32e

--- a/classes/__getflywheel_local_main_.hooksmain.html
+++ b/classes/__getflywheel_local_main_.hooksmain.html
@@ -105,7 +105,7 @@
 					<div class="tsd-signature tsd-kind-icon">registered<wbr>Hooks<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>actions<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol">; </span>filters<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L498">main.d.ts:498</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L503">main.d.ts:503</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -137,7 +137,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L503">main.d.ts:503</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L508">main.d.ts:508</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -166,7 +166,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L507">main.d.ts:507</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L512">main.d.ts:512</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -195,7 +195,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L509">main.d.ts:509</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L514">main.d.ts:514</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -224,7 +224,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L505">main.d.ts:505</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L510">main.d.ts:510</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -266,6 +266,9 @@
 				<ul class="before-current">
 					<li class=" tsd-kind-enum tsd-parent-kind-namespace">
 						<a href="../enums/__getflywheel_local_main_.lightningserviceplatform.html" class="tsd-kind-icon">Lightning<wbr>Service<wbr>Platform</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-parent-kind-namespace">
+						<a href="../enums/__getflywheel_local_main_.profiletypes.html" class="tsd-kind-icon">Profile<wbr>Types</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="__getflywheel_local_main_.downloaderqueue.html" class="tsd-kind-icon">Downloader<wbr>Queue</a>
