--- a/classes/__getflywheel_local_main_.lightningservice.html
+++ b/classes/__getflywheel_local_main_.lightningservice.html
@@ -138,7 +138,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L201">main.d.ts:201</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L206">main.d.ts:206</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -163,7 +163,7 @@
 					<div class="tsd-signature tsd-kind-icon">$PATH<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L326">main.d.ts:326</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L331">main.d.ts:331</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -182,7 +182,7 @@
 					<div class="tsd-signature tsd-kind-icon">$PATHs<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L319">main.d.ts:319</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L324">main.d.ts:324</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -209,7 +209,7 @@
 					<div class="tsd-signature tsd-kind-icon">_lightning<wbr>Services<span class="tsd-signature-symbol">:</span> <a href="__getflywheel_local_main_.services.lightningservices.html" class="tsd-signature-type">LightningServices</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L199">main.d.ts:199</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L204">main.d.ts:204</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -219,7 +219,7 @@
 					<div class="tsd-signature tsd-kind-icon">_logger<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L201">main.d.ts:201</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L206">main.d.ts:206</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -229,7 +229,7 @@
 					<div class="tsd-signature tsd-kind-icon">_site<span class="tsd-signature-symbol">:</span> <a href="__getflywheel_local_.site.html" class="tsd-signature-type">Site</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L197">main.d.ts:197</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L202">main.d.ts:202</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -239,7 +239,7 @@
 					<div class="tsd-signature tsd-kind-icon">bin<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L292">main.d.ts:292</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L297">main.d.ts:297</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -258,7 +258,7 @@
 					<div class="tsd-signature tsd-kind-icon">bin<wbr>Version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L261">main.d.ts:261</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L266">main.d.ts:266</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -279,7 +279,7 @@
 					<div class="tsd-signature tsd-kind-icon">bins<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L285">main.d.ts:285</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L290">main.d.ts:290</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -306,7 +306,7 @@
 					<div class="tsd-signature tsd-kind-icon">config<wbr>Path<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L370">main.d.ts:370</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L375">main.d.ts:375</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -328,7 +328,7 @@
 					<div class="tsd-signature tsd-kind-icon">config<wbr>Template<wbr>Path<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L268">main.d.ts:268</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L273">main.d.ts:273</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -347,7 +347,7 @@
 					<div class="tsd-signature tsd-kind-icon">config<wbr>Variables<span class="tsd-signature-symbol">:</span> <a href="../modules/__getflywheel_local_main_.html#configvariables" class="tsd-signature-type">ConfigVariables</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L333">main.d.ts:333</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L338">main.d.ts:338</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -366,7 +366,7 @@
 					<div class="tsd-signature tsd-kind-icon">env<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">ProcessEnv</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L309">main.d.ts:309</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L314">main.d.ts:314</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -388,7 +388,7 @@
 					<div class="tsd-signature tsd-kind-icon">label<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L252">main.d.ts:252</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L257">main.d.ts:257</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -411,7 +411,7 @@
 					<div class="tsd-signature tsd-kind-icon">logs<wbr>Path<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L390">main.d.ts:390</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L395">main.d.ts:395</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -433,7 +433,7 @@
 					<div class="tsd-signature tsd-kind-icon">port<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Local.SitePort</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L360">main.d.ts:360</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L365">main.d.ts:365</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -455,7 +455,7 @@
 					<div class="tsd-signature tsd-kind-icon">ports<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L351">main.d.ts:351</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L356">main.d.ts:356</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -477,7 +477,7 @@
 					<div class="tsd-signature tsd-kind-icon">required<wbr>Ports<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L342">main.d.ts:342</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L347">main.d.ts:347</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -507,7 +507,7 @@
 					<div class="tsd-signature tsd-kind-icon">run<wbr>Path<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L380">main.d.ts:380</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L385">main.d.ts:385</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -529,7 +529,7 @@
 					<div class="tsd-signature tsd-kind-icon">service<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L242">main.d.ts:242</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L247">main.d.ts:247</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -553,7 +553,7 @@
 					<div class="tsd-signature tsd-kind-icon">site<wbr>Config<wbr>Template<wbr>Path<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L275">main.d.ts:275</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L280">main.d.ts:280</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -572,7 +572,7 @@
 					<div class="tsd-signature tsd-kind-icon">site<wbr>Shell<wbr>Startup<wbr>Bat<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L410">main.d.ts:410</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L415">main.d.ts:415</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -594,7 +594,7 @@
 					<div class="tsd-signature tsd-kind-icon">site<wbr>Shell<wbr>StartupPOSIX<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L400">main.d.ts:400</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L405">main.d.ts:405</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -616,7 +616,7 @@
 					<div class="tsd-signature tsd-kind-icon">socket<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L299">main.d.ts:299</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L304">main.d.ts:304</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -642,7 +642,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L421">main.d.ts:421</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L426">main.d.ts:426</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -671,7 +671,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L431">main.d.ts:431</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L436">main.d.ts:436</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -699,7 +699,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L436">main.d.ts:436</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L441">main.d.ts:441</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -719,7 +719,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L444">main.d.ts:444</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L449">main.d.ts:449</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -743,7 +743,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L211">main.d.ts:211</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L216">main.d.ts:216</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -783,6 +783,9 @@
 				<ul class="before-current">
 					<li class=" tsd-kind-enum tsd-parent-kind-namespace">
 						<a href="../enums/__getflywheel_local_main_.lightningserviceplatform.html" class="tsd-kind-icon">Lightning<wbr>Service<wbr>Platform</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-parent-kind-namespace">
+						<a href="../enums/__getflywheel_local_main_.profiletypes.html" class="tsd-kind-icon">Profile<wbr>Types</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="__getflywheel_local_main_.downloaderqueue.html" class="tsd-kind-icon">Downloader<wbr>Queue</a>
