--- a/interfaces/__getflywheel_local_main_.iimportsitesettings.html
+++ b/interfaces/__getflywheel_local_main_.iimportsitesettings.html
@@ -118,7 +118,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="__getflywheel_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="__getflywheel_local_.newsiteinfo.html#blueprint">blueprint</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L51">index.d.ts:51</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/index.d.ts#L51">index.d.ts:51</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -129,7 +129,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="__getflywheel_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="__getflywheel_local_.newsiteinfo.html#database">database</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L49">index.d.ts:49</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/index.d.ts#L49">index.d.ts:49</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -140,7 +140,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="__getflywheel_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="__getflywheel_local_.newsiteinfo.html#environment">environment</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L50">index.d.ts:50</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/index.d.ts#L50">index.d.ts:50</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -150,7 +150,7 @@
 					<div class="tsd-signature tsd-kind-icon">import<wbr>Data<span class="tsd-signature-symbol">:</span> <a href="__getflywheel_local_main_.iimportdata.html" class="tsd-signature-type">IImportData</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L629">main.d.ts:629</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L634">main.d.ts:634</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -161,7 +161,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="__getflywheel_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="__getflywheel_local_.newsiteinfo.html#multisite">multiSite</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L47">index.d.ts:47</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/index.d.ts#L47">index.d.ts:47</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -172,7 +172,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="__getflywheel_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="__getflywheel_local_.newsiteinfo.html#phpversion">phpVersion</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L48">index.d.ts:48</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/index.d.ts#L48">index.d.ts:48</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -183,7 +183,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="__getflywheel_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="__getflywheel_local_.newsiteinfo.html#sitedomain">siteDomain</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L46">index.d.ts:46</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/index.d.ts#L46">index.d.ts:46</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -194,7 +194,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="__getflywheel_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="__getflywheel_local_.newsiteinfo.html#sitename">siteName</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L44">index.d.ts:44</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/index.d.ts#L44">index.d.ts:44</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -205,7 +205,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="__getflywheel_local_.newsiteinfo.html">NewSiteInfo</a>.<a href="__getflywheel_local_.newsiteinfo.html#sitepath">sitePath</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L45">index.d.ts:45</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/index.d.ts#L45">index.d.ts:45</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -215,7 +215,7 @@
 					<div class="tsd-signature tsd-kind-icon">zip<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L630">main.d.ts:630</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L635">main.d.ts:635</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -245,6 +245,9 @@
 				<ul class="before-current">
 					<li class=" tsd-kind-enum tsd-parent-kind-namespace">
 						<a href="../enums/__getflywheel_local_main_.lightningserviceplatform.html" class="tsd-kind-icon">Lightning<wbr>Service<wbr>Platform</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-parent-kind-namespace">
+						<a href="../enums/__getflywheel_local_main_.profiletypes.html" class="tsd-kind-icon">Profile<wbr>Types</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/__getflywheel_local_main_.downloaderqueue.html" class="tsd-kind-icon">Downloader<wbr>Queue</a>
