--- a/interfaces/__getflywheel_local_main_.registeredservice.html
+++ b/interfaces/__getflywheel_local_main_.registeredservice.html
@@ -113,7 +113,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="__getflywheel_local_main_.selectablesiteservice.html">SelectableSiteService</a>.<a href="__getflywheel_local_main_.selectablesiteservice.html#binversion">binVersion</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L105">main.d.ts:105</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L105">main.d.ts:105</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -134,7 +134,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="__getflywheel_local_main_.selectablesiteservice.html">SelectableSiteService</a>.<a href="__getflywheel_local_main_.selectablesiteservice.html#label">label</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L90">main.d.ts:90</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L90">main.d.ts:90</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -155,7 +155,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="__getflywheel_local_main_.selectablesiteservice.html">SelectableSiteService</a>.<a href="__getflywheel_local_main_.selectablesiteservice.html#name">name</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L84">main.d.ts:84</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L84">main.d.ts:84</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -175,7 +175,7 @@
 					<div class="tsd-signature tsd-kind-icon">registered<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">true</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L114">main.d.ts:114</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L114">main.d.ts:114</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -186,7 +186,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="__getflywheel_local_main_.selectablesiteservice.html">SelectableSiteService</a>.<a href="__getflywheel_local_main_.selectablesiteservice.html#version">version</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L98">main.d.ts:98</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L98">main.d.ts:98</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -227,6 +227,9 @@
 				<ul class="before-current">
 					<li class=" tsd-kind-enum tsd-parent-kind-namespace">
 						<a href="../enums/__getflywheel_local_main_.lightningserviceplatform.html" class="tsd-kind-icon">Lightning<wbr>Service<wbr>Platform</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-parent-kind-namespace">
+						<a href="../enums/__getflywheel_local_main_.profiletypes.html" class="tsd-kind-icon">Profile<wbr>Types</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/__getflywheel_local_main_.downloaderqueue.html" class="tsd-kind-icon">Downloader<wbr>Queue</a>
