--- a/enums/__getflywheel_local_main_.profiletypes.html
+++ b/enums/__getflywheel_local_main_.profiletypes.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>SelectableSiteService | @getflywheel/local</title>
+	<title>ProfileTypes | @getflywheel/local</title>
 	<meta name="description" content="Documentation for @getflywheel/local">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -57,130 +57,62 @@
 					<a href="../modules/__getflywheel_local_main_.html">&quot;@getflywheel/local/main&quot;</a>
 				</li>
 				<li>
-					<a href="__getflywheel_local_main_.selectablesiteservice.html">SelectableSiteService</a>
+					<a href="__getflywheel_local_main_.profiletypes.html">ProfileTypes</a>
 				</li>
 			</ul>
-			<h1>Interface SelectableSiteService</h1>
+			<h1>Enumeration ProfileTypes</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
-			<section class="tsd-panel tsd-hierarchy">
-				<h3>Hierarchy</h3>
-				<ul class="tsd-hierarchy">
-					<li>
-						<span class="target">SelectableSiteService</span>
-						<ul class="tsd-hierarchy">
-							<li>
-								<a href="__getflywheel_local_main_.registeredservice.html" class="tsd-signature-type">RegisteredService</a>
-							</li>
-							<li>
-								<a href="__getflywheel_local_main_.downloadableservice.html" class="tsd-signature-type">DownloadableService</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
-			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
-							<h3>Properties</h3>
+							<h3>Enumeration members</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="__getflywheel_local_main_.selectablesiteservice.html#binversion" class="tsd-kind-icon">bin<wbr>Version</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="__getflywheel_local_main_.selectablesiteservice.html#label" class="tsd-kind-icon">label</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="__getflywheel_local_main_.selectablesiteservice.html#name" class="tsd-kind-icon">name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="__getflywheel_local_main_.selectablesiteservice.html#version" class="tsd-kind-icon">version</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="__getflywheel_local_main_.profiletypes.html#hub" class="tsd-kind-icon">HUB</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="__getflywheel_local_main_.profiletypes.html#teams" class="tsd-kind-icon">TEAMS</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="__getflywheel_local_main_.profiletypes.html#user" class="tsd-kind-icon">USER</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="binversion" class="tsd-anchor"></a>
-					<h3>bin<wbr>Version</h3>
-					<div class="tsd-signature tsd-kind-icon">bin<wbr>Version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+				<h2>Enumeration members</h2>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="hub" class="tsd-anchor"></a>
+					<h3>HUB</h3>
+					<div class="tsd-signature tsd-kind-icon">HUB<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;hub&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L105">main.d.ts:105</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L196">main.d.ts:196</a></li>
 						</ul>
 					</aside>
-					<div class="tsd-comment tsd-typography">
-						<dl class="tsd-comment-tags">
-							<dt>description</dt>
-							<dd><p>Binary version for the service.</p>
-							</dd>
-							<dt>tjs-examples</dt>
-							<dd><p>[&quot;7.3.5&quot;]</p>
-							</dd>
-						</dl>
-					</div>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="label" class="tsd-anchor"></a>
-					<h3>label</h3>
-					<div class="tsd-signature tsd-kind-icon">label<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="teams" class="tsd-anchor"></a>
+					<h3>TEAMS</h3>
+					<div class="tsd-signature tsd-kind-icon">TEAMS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;teams&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L90">main.d.ts:90</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L194">main.d.ts:194</a></li>
 						</ul>
 					</aside>
-					<div class="tsd-comment tsd-typography">
-						<dl class="tsd-comment-tags">
-							<dt>description</dt>
-							<dd><p>Label of Lightning Service that&#39;s suitable for use in a UI</p>
-							</dd>
-							<dt>tjs-examples</dt>
-							<dd><p>[&quot;PHP&quot;]</p>
-							</dd>
-						</dl>
-					</div>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="name" class="tsd-anchor"></a>
-					<h3>name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="user" class="tsd-anchor"></a>
+					<h3>USER</h3>
+					<div class="tsd-signature tsd-kind-icon">USER<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;user&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L84">main.d.ts:84</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L195">main.d.ts:195</a></li>
 						</ul>
 					</aside>
-					<div class="tsd-comment tsd-typography">
-						<dl class="tsd-comment-tags">
-							<dt>description</dt>
-							<dd><p>Name of the Lightning Service</p>
-							</dd>
-							<dt>tjs-examples</dt>
-							<dd><p>[&quot;php&quot;]</p>
-							</dd>
-						</dl>
-					</div>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="version" class="tsd-anchor"></a>
-					<h3>version</h3>
-					<div class="tsd-signature tsd-kind-icon">version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L98">main.d.ts:98</a></li>
-						</ul>
-					</aside>
-					<div class="tsd-comment tsd-typography">
-						<dl class="tsd-comment-tags">
-							<dt>description</dt>
-							<dd><p>Build version of Lightning Service. This is typically the binVersion followed by build metadata.
-								This allows us to iterate on a specific binVersion by patching configs, etc.</p>
-							</dd>
-							<dt>tjs-examples</dt>
-							<dd><p>[&quot;7.3.5+2&quot;]</p>
-							</dd>
-						</dl>
-					</div>
 				</section>
 			</section>
 		</div>
@@ -207,11 +139,26 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-enum tsd-parent-kind-namespace">
-						<a href="../enums/__getflywheel_local_main_.lightningserviceplatform.html" class="tsd-kind-icon">Lightning<wbr>Service<wbr>Platform</a>
+						<a href="__getflywheel_local_main_.lightningserviceplatform.html" class="tsd-kind-icon">Lightning<wbr>Service<wbr>Platform</a>
 					</li>
-					<li class=" tsd-kind-enum tsd-parent-kind-namespace">
-						<a href="../enums/__getflywheel_local_main_.profiletypes.html" class="tsd-kind-icon">Profile<wbr>Types</a>
+				</ul>
+				<ul class="current">
+					<li class="current tsd-kind-enum tsd-parent-kind-namespace">
+						<a href="__getflywheel_local_main_.profiletypes.html" class="tsd-kind-icon">Profile<wbr>Types</a>
+						<ul>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="__getflywheel_local_main_.profiletypes.html#hub" class="tsd-kind-icon">HUB</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="__getflywheel_local_main_.profiletypes.html#teams" class="tsd-kind-icon">TEAMS</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="__getflywheel_local_main_.profiletypes.html#user" class="tsd-kind-icon">USER</a>
+							</li>
+						</ul>
 					</li>
+				</ul>
+				<ul class="after-current">
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/__getflywheel_local_main_.downloaderqueue.html" class="tsd-kind-icon">Downloader<wbr>Queue</a>
 					</li>
@@ -234,52 +181,34 @@
 						<a href="../classes/__getflywheel_local_main_.userdata.html" class="tsd-kind-icon">User<wbr>Data</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="__getflywheel_local_main_.downloadableservice.html" class="tsd-kind-icon">Downloadable<wbr>Service</a>
+						<a href="../interfaces/__getflywheel_local_main_.downloadableservice.html" class="tsd-kind-icon">Downloadable<wbr>Service</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="__getflywheel_local_main_.downloaderqueueitem.html" class="tsd-kind-icon">Downloader<wbr>Queue<wbr>Item</a>
+						<a href="../interfaces/__getflywheel_local_main_.downloaderqueueitem.html" class="tsd-kind-icon">Downloader<wbr>Queue<wbr>Item</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="__getflywheel_local_main_.iappstate.html" class="tsd-kind-icon">IApp<wbr>State</a>
+						<a href="../interfaces/__getflywheel_local_main_.iappstate.html" class="tsd-kind-icon">IApp<wbr>State</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="__getflywheel_local_main_.iimportdata.html" class="tsd-kind-icon">IImport<wbr>Data</a>
+						<a href="../interfaces/__getflywheel_local_main_.iimportdata.html" class="tsd-kind-icon">IImport<wbr>Data</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="__getflywheel_local_main_.iimportsitesettings.html" class="tsd-kind-icon">IImport<wbr>Site<wbr>Settings</a>
+						<a href="../interfaces/__getflywheel_local_main_.iimportsitesettings.html" class="tsd-kind-icon">IImport<wbr>Site<wbr>Settings</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="__getflywheel_local_main_.processstat.html" class="tsd-kind-icon">Process<wbr>Stat</a>
+						<a href="../interfaces/__getflywheel_local_main_.processstat.html" class="tsd-kind-icon">Process<wbr>Stat</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="__getflywheel_local_main_.registeredservice.html" class="tsd-kind-icon">Registered<wbr>Service</a>
-					</li>
-				</ul>
-				<ul class="current">
-					<li class="current tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="__getflywheel_local_main_.selectablesiteservice.html" class="tsd-kind-icon">Selectable<wbr>Site<wbr>Service</a>
-						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="__getflywheel_local_main_.selectablesiteservice.html#binversion" class="tsd-kind-icon">bin<wbr>Version</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="__getflywheel_local_main_.selectablesiteservice.html#label" class="tsd-kind-icon">label</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="__getflywheel_local_main_.selectablesiteservice.html#name" class="tsd-kind-icon">name</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="__getflywheel_local_main_.selectablesiteservice.html#version" class="tsd-kind-icon">version</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
-				<ul class="after-current">
-					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="__getflywheel_local_main_.servicebin.html" class="tsd-kind-icon">Service<wbr>Bin</a>
+						<a href="../interfaces/__getflywheel_local_main_.registeredservice.html" class="tsd-kind-icon">Registered<wbr>Service</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="__getflywheel_local_main_.servicecontainerservices.html" class="tsd-kind-icon">Service<wbr>Container<wbr>Services</a>
+						<a href="../interfaces/__getflywheel_local_main_.selectablesiteservice.html" class="tsd-kind-icon">Selectable<wbr>Site<wbr>Service</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
+						<a href="../interfaces/__getflywheel_local_main_.servicebin.html" class="tsd-kind-icon">Service<wbr>Bin</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
+						<a href="../interfaces/__getflywheel_local_main_.servicecontainerservices.html" class="tsd-kind-icon">Service<wbr>Container<wbr>Services</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-namespace">
 						<a href="../modules/__getflywheel_local_main_.html#configvariables" class="tsd-kind-icon">Config<wbr>Variables</a>
@@ -320,9 +249,6 @@
 	<div class="container">
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
-			</ul>
 		</div>
 	</div>
 </footer>
