--- a/interfaces/__getflywheel_local_main_.downloadableservice.html
+++ b/interfaces/__getflywheel_local_main_.downloadableservice.html
@@ -109,7 +109,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="__getflywheel_local_main_.selectablesiteservice.html">SelectableSiteService</a>.<a href="__getflywheel_local_main_.selectablesiteservice.html#binversion">binVersion</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L105">main.d.ts:105</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L105">main.d.ts:105</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -129,7 +129,7 @@
 					<div class="tsd-signature tsd-kind-icon">bins<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>darwin<span class="tsd-signature-symbol">?: </span><a href="__getflywheel_local_main_.servicebin.html" class="tsd-signature-type">ServiceBin</a><span class="tsd-signature-symbol">; </span>linux<span class="tsd-signature-symbol">?: </span><a href="__getflywheel_local_main_.servicebin.html" class="tsd-signature-type">ServiceBin</a><span class="tsd-signature-symbol">; </span>win32<span class="tsd-signature-symbol">?: </span><a href="__getflywheel_local_main_.servicebin.html" class="tsd-signature-type">ServiceBin</a><span class="tsd-signature-symbol">; </span>win64<span class="tsd-signature-symbol">?: </span><a href="__getflywheel_local_main_.servicebin.html" class="tsd-signature-type">ServiceBin</a><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L162">main.d.ts:162</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L162">main.d.ts:162</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -163,7 +163,7 @@
 					<div class="tsd-signature tsd-kind-icon">engines<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>local-by-flywheel<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L134">main.d.ts:134</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L134">main.d.ts:134</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -200,7 +200,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="__getflywheel_local_main_.selectablesiteservice.html">SelectableSiteService</a>.<a href="__getflywheel_local_main_.selectablesiteservice.html#label">label</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L90">main.d.ts:90</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L90">main.d.ts:90</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -221,7 +221,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="__getflywheel_local_main_.selectablesiteservice.html">SelectableSiteService</a>.<a href="__getflywheel_local_main_.selectablesiteservice.html#name">name</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L84">main.d.ts:84</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L84">main.d.ts:84</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -241,7 +241,7 @@
 					<div class="tsd-signature tsd-kind-icon">size<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L157">main.d.ts:157</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L157">main.d.ts:157</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -264,7 +264,7 @@
 					<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L150">main.d.ts:150</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L150">main.d.ts:150</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -288,7 +288,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="__getflywheel_local_main_.selectablesiteservice.html">SelectableSiteService</a>.<a href="__getflywheel_local_main_.selectablesiteservice.html#version">version</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L98">main.d.ts:98</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/58962d4/main.d.ts#L98">main.d.ts:98</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -329,6 +329,9 @@
 				<ul class="before-current">
 					<li class=" tsd-kind-enum tsd-parent-kind-namespace">
 						<a href="../enums/__getflywheel_local_main_.lightningserviceplatform.html" class="tsd-kind-icon">Lightning<wbr>Service<wbr>Platform</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-parent-kind-namespace">
+						<a href="../enums/__getflywheel_local_main_.profiletypes.html" class="tsd-kind-icon">Profile<wbr>Types</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/__getflywheel_local_main_.downloaderqueue.html" class="tsd-kind-icon">Downloader<wbr>Queue</a>
